--- a/src/views/editCRUD.ejs
+++ b/src/views/editCRUD.ejs
@@ -1,42 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+            crossorigin="anonymous"
+        />
+        <title>About</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>About</title>
-</head>
+    <body>
+        <div style="width: 800px; margin: auto">
+            <form
+                action="/put-CRUD"
+                method="post"
+            >
+                <div class="form-row">
+                    <div class="col-12 mt-3">
+                        <span><b>Edit User Form :</b></span>
+                    </div>
 
-<body>
-    <div style="width: 800px; margin: auto">
-        <form action="/put-CRUD" method="post">
-
-            <div class="form-row">
-                <div class="col-12 mt-3"> <span><b>Edit User Form :</b></span></div>
-
-                <div class="form-group col-md-6">
-                    <label for="inputAddress">FirstName</label>
-                    <input type="text" class="form-control" name="firstName" value="<%= User.firstName %>">
+                    <div class="form-group col-md-6">
+                        <label for="inputAddress">FirstName</label>
+                        <input
+                            type="text"
+                            class="form-control"
+                            name="firstName"
+                            value="<%= User.firstName %>"
+                        />
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="inputAddress2">LastName</label>
+                        <input
+                            type="text"
+                            class="form-control"
+                            name="lastName"
+                            value="<%= User.lastName %>"
+                        />
+                    </div>
+                    <div class=" form-group col-md-12">
+                        <label for="inputCity">Address</label>
+                        <input
+                            type="text"
+                            class="form-control"
+                            name="address"
+                            value="<%= User.address %>"
+                        />
+                    </div>
+                    <input
+                        name="id"
+                        value="<%= User.id %>"
+                        style="display: none;"
+                    />
                 </div>
-                <div class="form-group col-md-6">
-                    <label for="inputAddress2">LastName</label>
-                    <input type="text" class="form-control" name="lastName" value="<%= User.lastName %>">
-                </div>
-                <div class=" form-group col-md-12">
-                    <label for="inputCity">Address</label>
-                    <input type="text" class="form-control" name="address" value="<%= User.address %>">
-                </div>
-                <input name="id" value="<%= User.id %>" style="display: none;" />
-
-            </div>
-            <button type=" submit" class="btn btn-primary">Update</button>
-
-        </form>
-    </div>
-
-
-</body>
-
+                <button
+                    type=" submit"
+                    class="btn btn-primary"
+                >
+                    Update
+                </button>
+            </form>
+        </div>
+    </body>
 </html>
